feat: v1.0.0-rc.1 strong types, tooling, cleanup